infra/worker.yml
# Worker Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: registry.digitalocean.com/abel/worker:latest
        resources:
          limits:
            memory: "2512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
---
